ir/tests/snapshots/grammar_json_snapshots__grammar_with_fragile_tokens.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "fragile_demo",
  "rules": {
    "5": [
      {
        "lhs": 5,
        "rhs": [
          {
            "Terminal": 2
          },
          {
            "Terminal": 1
          },
          {
            "Terminal": 4
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "IDENTIFIER",
      "pattern": {
        "Regex": "[a-zA-Z_]\\w*"
      },
      "fragile": false
    },
    "2": {
      "name": "KEYWORD_IF",
      "pattern": {
        "Regex": "if"
      },
      "fragile": true
    },
    "3": {
      "name": "KEYWORD_ELSE",
      "pattern": {
        "Regex": "else"
      },
      "fragile": true
    },
    "4": {
      "name": ";",
      "pattern": {
        "String": ";"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "5": "statement"
  },
  "symbol_registry": null,
  "word_token": null,
  "lexical_metadata": {}
}
